# ets2-sdk-plugin-master

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
ets2-telemetry/: config.json
ets2-telemetry/inc/: sharedmemory.hpp  web_api.hpp
ets2-telemetry/src/: ets2-telemetry.cpp  sharedmemory.cpp  web_api.cpp
